# sockman

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  README.md  sockman.pc.in
.github/workflows/: cmake.yml
doc/: mainpage.md
example/: chat_client.cpp  chat_server.cpp  echo_client.cpp  echo_server.cpp  simple_listener.cpp  simple_receiver.cpp  timeout.cpp
include/sockman/: handler_i.hpp  manager.hpp  sockman.hpp
src/sockman/: manager.cpp  socket_context.hpp  socketcontext.hpp
test-src/sockman/: mock_handler.hpp  test_manager.cpp
